--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,7 @@ jobs:
       - # &dependencies_ubuntu
         name: Install Dependencies (ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install sed -y
+        run: sudo apt-get update && sudo apt-get install sed docker.io -y
       - # &dependencies_windows
         name: Install Dependencies (windows)
         if: matrix.os == 'windows-latest'
